--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guitar Kings</title>
+    <meta name="viewport" content="et real authentic, hand-crafted guitars from Guitar Kings">
+    <title>Guitar Kings | Home</title>
 </head>
 <body>
     <header>
@@ -12,8 +12,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li>Guitars</li>
-                <li>Contact</li>
+                <li><a href="guitars.html">Guitars</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <section>
@@ -33,23 +33,56 @@
                     <li>Options for all music lovers</li>
                 </ul>
             </div>
-        <p>Hands strumming guitar</p>
+        <img src="images/home-info.jpg" alt="Hands strumming guitar" />
         </section>
-        <h2>Reviews</h2>
-        <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+        <section>
+            <h2>Reviews</h2>
+            <div>
+            <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
             Suspendisse quis dictum elit. 
             In hac habitasse platea dictumst." 
             
             - Bob Willis</p>
-        <p>"Maecenas interdum, erat nec pulvinar euismod, 
+            <img src="images/review-bio.jpg" alt="Profile picture of Bob Willis" />
+            </div>
+            <div>
+            <p>"Maecenas interdum, erat nec pulvinar euismod, 
             eros erat ornare mauris, commodo vestibulum 
             odio nunc id urna. Sed volutpat consequat dolor, 
             nec sollicitudin elit eleifend vitae. " 
             
             - Sally Oldfield</p>
+            <img src="images/review-bio2.jpg" alt="Profile picture of Sally Oldfield" />
+            </div>
+        </section>
+        <section>
+            <h2>View our gutiars</h2>
+            <div>
+                <img src="images/product.jpg" alt="Adirondack Red" />
+                <h3>Adirondack Red</h3>
+                <p>$500</p>
+                <a href="products/adirondack-red.html">View</a>
+            </div>
+            <div>
+                <img src="images/product.jpg" alt="Adirondack Red" />
+                <h3>Adirondack Red</h3>
+                <p>$500</p>
+                <a href="products/adirondack-red.html">On sale</a>
+            </div>
+            <div>
+                <img src="images/product.jpg" alt="Adirondack Red" />
+                <h3>Adirondack Red</h3>
+                <p>$500</p>
+                <a href="products/adirondack-red.html">View</a>
+            </div>
+            <div>
+                <img src="images/product.jpg" alt="Adirondack Red" />
+                <h3>Adirondack Red</h3>
+                <p>$500</p>
+                <a href="products/adirondack-red.html">View</a>
+            </div>
+        </section>
     </main>
-    <footer>
-            Copyright &copy;
-    </footer>
+    <footer>Copyright &copy;</footer>
 </body>
 </html>
