--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </nav>
         <section>
             <h1>Authentic Handmade Guitars</h1>
-            <a href="index.html">View Guitars</a>
+            <a href="guitars.html">View Guitars</a>
         </section>
     </header>
     <main>
