--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="et real authentic, hand-crafted guitars from Guitar Kings">
+    <link href="css/styles.css" rel="stylesheet">
     <title>Guitar Kings | Home</title>
 </head>
 <body>
@@ -11,14 +12,16 @@
         <a href="index.html">Guitar Kings</a>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="guitars.html">Guitars</a></li>
-                <li><a href="contact.html">Contact</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="guitars.html" class="active">Guitars</a></li>
+                <li><a href="contact.html" class="active">Contact</a></li>
             </ul>
         </nav>
+    </header>
+        <main>
         <section>
             <h1>Authentic Handmade Guitars</h1>
-            <a href="guitars.html">View Guitars</a>
+            <a href="guitars.html" class="cta">View Guitars</a>
         </section>
     </header>
     <main>
@@ -55,33 +58,33 @@
             <img src="images/review-bio2.jpg" alt="Profile picture of Sally Oldfield" />
             </div>
         </section>
-        <section>
-            <h2>View our gutiars</h2>
-            <div>
-                <img src="images/product.jpg" alt="Adirondack Red" />
-                <h3>Adirondack Red</h3>
-                <p>$500</p>
-                <a href="products/adirondack-red.html">View</a>
+        <section class="featured">
+            <h2>View Our Guitars</h2>
+            <div class="featured--products">
+              <img src="images/product.jpg" alt="Adirondack Red" />
+              <h3>Adirondack Red</h3>
+              <p>$500</p>
+              <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
-            <div>
-                <img src="images/product.jpg" alt="Adirondack Red" />
-                <h3>Adirondack Red</h3>
-                <p>$500</p>
-                <a href="products/adirondack-red.html">On sale</a>
+            <div class="featured--products">
+              <img src="images/product.jpg" alt="Adirondack Red" />
+              <h3>Adirondack Red</h3>
+              <p>$500</p>
+              <a href="products/adirondack-red.html" class="cta cta-sale">On sale</a>
             </div>
-            <div>
-                <img src="images/product.jpg" alt="Adirondack Red" />
-                <h3>Adirondack Red</h3>
-                <p>$500</p>
-                <a href="products/adirondack-red.html">View</a>
+            <div class="featured--products">
+              <img src="images/product.jpg" alt="Adirondack Red" />
+              <h3>Adirondack Red</h3>
+              <p>$500</p>
+              <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
-            <div>
-                <img src="images/product.jpg" alt="Adirondack Red" />
-                <h3>Adirondack Red</h3>
-                <p>$500</p>
-                <a href="products/adirondack-red.html">View</a>
+            <div class="featured--products">
+              <img src="images/product.jpg" alt="Adirondack Red" />
+              <h3>Adirondack Red</h3>
+              <p>$500</p>
+              <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
-        </section>
+          </section>
     </main>
     <footer>Copyright &copy;</footer>
 </body>
