--- a/products/adirondack-red.html
+++ b/products/adirondack-red.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="View our most popular guitar - the Adirondack-red">
+    <link href="../css/styles.css" rel="stylesheet">
     <title>Guitar Kings | Adirondack Red</title>
 </head>
 <body>
@@ -41,7 +42,7 @@
             <p>
                 $500
             </p>
-            <a href="../contact.html">Contact us</a>
+            <a href="../contact.html" class="cta">Contact us</a>
         </section>
 
     </main>
