--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="Contact guitar kings for amazing products">
+    <link href="css/styles.css" rel="stylesheet">
     <title>Guitar Kings | Contact</title>
 </head>
 <body>
