--- a/guitars.html
+++ b/guitars.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="View a list of guitars">
+    <link href="css/styles.css" rel="stylesheet">
     <title>Guitar Kings | Guitars</title>
 </head>
 <body>
@@ -24,55 +25,55 @@
               <img src="images/product.jpg" alt="Adirondack Red" />
               <h2>Adirondack Red</h2>
               <p>$500</p>
-              <a href="products/adirondack-red.html">View</a>
+              <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
             <div>
               <img src="images/product.jpg" alt="Adirondack Red" />
               <h2>Adirondack Red</h2>
               <p>$500</p>
-              <a href="products/adirondack-red.html">View</a>
+              <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
             <div>
               <img src="images/product.jpg" alt="Adirondack Red" />
               <h2>Adirondack Red</h2>
               <p>$500</p>
-              <a href="products/adirondack-red.html">View</a>
+              <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
             <div>
               <img src="images/product.jpg" alt="Adirondack Red" />
               <h2>Adirondack Red</h2>
               <p>$500</p>
-              <a href="products/adirondack-red.html">View</a>
+              <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
             <div>
               <img src="images/product.jpg" alt="Adirondack Red" />
               <h2>Adirondack Red</h2>
               <p>$500</p>
-              <a href="products/adirondack-red.html">View</a>
+              <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
             <div>
               <img src="images/product.jpg" alt="Adirondack Red" />
               <h2>Adirondack Red</h2>
               <p>$500</p>
-              <a href="products/adirondack-red.html">View</a>
+              <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
             <div>
               <img src="images/product.jpg" alt="Adirondack Red" />
               <h2>Adirondack Red</h2>
               <p>$500</p>
-              <a href="products/adirondack-red.html">View</a>
+              <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
             <div>
               <img src="images/product.jpg" alt="Adirondack Red" />
               <h2>Adirondack Red</h2>
               <p>$500</p>
-              <a href="products/adirondack-red.html">View</a>
+              <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
             <div>
               <img src="images/product.jpg" alt="Adirondack Red" />
               <h2>Adirondack Red</h2>
               <p>$500</p>
-              <a href="products/adirondack-red.html">View</a>
+              <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
           </section>
     </main>
