--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             </div>
         <img src="images/home-info.jpg" alt="Hands strumming guitar" />
         </section>
-        <section>
+        <section class="reviews">
             <h2>Reviews</h2>
             <div>
             <p>"Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
