--- a/guitars.html
+++ b/guitars.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header>
-        <a href="index.html">Guitar Kings</a>
+        <a href="index.html" class="logo">Guitar Kings</a>
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -20,7 +20,7 @@
     </header>
     <main>
         <h1>Guitars</h1>
-        <section>
+        <section class="product-list">
             <div>
               <img src="images/product.jpg" alt="Adirondack Red" />
               <h2>Adirondack Red</h2>
