--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="et real authentic, hand-crafted guitars from Guitar Kings">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">  <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
     <link href="css/styles.css" rel="stylesheet">
     <title>Guitar Kings | Home</title>
 </head>
@@ -24,7 +29,6 @@
             <a href="guitars.html" class="cta">View Guitars</a>
         </section>
     </header>
-    <main>
         <section>
             <div>
                 <h2>Our Gitars Are:</h2>
@@ -85,7 +89,7 @@
               <a href="products/adirondack-red.html" class="cta">View</a>
             </div>
           </section>
-    </main>
+        </main>
     <footer>Copyright &copy;</footer>
 </body>
 </html>
