--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         </nav>
     </header>
         <main>
-        <section>
+        <section class="welcome">
             <h1>Authentic Handmade Guitars</h1>
             <a href="guitars.html" class="cta">View Guitars</a>
         </section>
-        <section>
+        <section class="selling-points">
             <div>
                 <h2>Our Gitars Are:</h2>
                 <ul>
@@ -39,7 +39,7 @@
                     <li>Options for all music lovers</li>
                 </ul>
             </div>
-        <img src="images/home-info.jpg" alt="Hands strumming guitar" />
+        <img src="images/home-info.jpg" alt="Hands strumming guitar" class="selling-points_images" />
         </section>
         <section class="reviews">
             <h2>Reviews</h2>
@@ -49,7 +49,7 @@
             In hac habitasse platea dictumst." 
             
             - Bob Willis</p>
-            <img src="images/review-bio.jpg" alt="Profile picture of Bob Willis" />
+            <img src="images/review-bio.jpg" alt="Profile picture of Bob Willis" class="review_images" />
             </div>
             <div>
             <p>"Maecenas interdum, erat nec pulvinar euismod, 
@@ -58,7 +58,7 @@
             nec sollicitudin elit eleifend vitae. " 
             
             - Sally Oldfield</p>
-            <img src="images/review-bio2.jpg" alt="Profile picture of Sally Oldfield" />
+            <img src="images/review-bio2.jpg" alt="Profile picture of Sally Oldfield" class="review_images"/>
             </div>
         </section>
         <section class="featured">
