--- a/contact.html
+++ b/contact.html
@@ -20,6 +20,29 @@
     </header>
     <main>
        <h1>Contact</h1>
+       <section>
+        <label for="fullname">Full name</label>
+        <input type="text" name="fullname" id="fullname">
+        <label for="email">Email</label>
+        <input type="email" name="email" id="email">
+        <label for="guitar">Guitar</label>
+        <select name="guitar" id="guitar">
+            <option value="adirondack-red">Adirondack Red</option>
+            <option value="adirondack-red">Adirondack Red</option>
+            <option value="adirondack-red">Adirondack Red</option>
+            <option value="adirondack-red">Adirondack Red</option>
+            <option value="adirondack-red">Adirondack Red</option>
+            <option value="adirondack-red">Adirondack Red</option>
+            <option value="adirondack-red">Adirondack Red</option>
+            <option value="adirondack-red">Adirondack Red</option>
+            <option value="adirondack-red">Adirondack Red</option>
+            <input type="checkbox" name="signup" id="signup">
+            <label for="signup">Sign up for email updates.</label>
+            <label for="message">Message</label>
+            <textarea id="message" name="message" rows="5" cols="30"></textarea>
+            <input type="submit" value="Send Now">
+        </select>
+    </section>
     </main>
     <footer>Copyright &copy;</footer>
 </body>
