--- a/contact.html
+++ b/contact.html
@@ -27,21 +27,16 @@
         <input type="email" name="email" id="email">
         <label for="guitar">Guitar</label>
         <select name="guitar" id="guitar">
-            <option value="adirondack-red">Adirondack Red</option>
-            <option value="adirondack-red">Adirondack Red</option>
-            <option value="adirondack-red">Adirondack Red</option>
-            <option value="adirondack-red">Adirondack Red</option>
-            <option value="adirondack-red">Adirondack Red</option>
-            <option value="adirondack-red">Adirondack Red</option>
-            <option value="adirondack-red">Adirondack Red</option>
-            <option value="adirondack-red">Adirondack Red</option>
-            <option value="adirondack-red">Adirondack Red</option>
+            <option value="Adirondack Red">Adirondack Red</option>
+            <option value="Adirondack Blue">Adirondack Blue</option>
+            <option value="Adirondack Green">Adirondack Green</option>
+        </select>
             <input type="checkbox" name="signup" id="signup">
             <label for="signup">Sign up for email updates.</label>
             <label for="message">Message</label>
             <textarea id="message" name="message" rows="5" cols="30"></textarea>
             <input type="submit" value="Send Now">
-        </select>
+       
     </section>
     </main>
     <footer>Copyright &copy;</footer>
