--- a/contact.html
+++ b/contact.html
@@ -20,7 +20,7 @@
     </header>
     <main>
        <h1>Contact</h1>
-       <section>
+       <form method="POST">
         <label for="fullname">Full name</label>
         <input type="text" name="fullname" id="fullname">
         <label for="email">Email</label>
@@ -31,13 +31,12 @@
             <option value="Adirondack Blue">Adirondack Blue</option>
             <option value="Adirondack Green">Adirondack Green</option>
         </select>
-            <input type="checkbox" name="signup" id="signup">
-            <label for="signup">Sign up for email updates.</label>
+            <input type="checkbox" name="email-updates" id="email-updates">
+            <label for="email-updates">Sign up for email updates.</label>
             <label for="message">Message</label>
-            <textarea id="message" name="message" rows="5" cols="30"></textarea>
-            <input type="submit" value="Send Now">
-       
-    </section>
+            <textarea id="message" name="message"></textarea>
+            <input type="submit" value="Send Now" class="cta">
+        </form>
     </main>
     <footer>Copyright &copy;</footer>
 </body>
