--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
         <nav>
             <ul>
                 <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="guitars.html" class="active">Guitars</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
+                <li><a href="guitars.html">Guitars</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -36,7 +36,7 @@
                     <li>Crafted by a family-run business</li>
                     <li>Built to last a lifetime</li>
                     <li>Beautiful unique sound</li>
-                    <li>Options for all music lovers</li>
+                    <li>Options for all music lovers</li> 
                 </ul>
             </div>
         <img src="images/home-info.jpg" alt="Hands strumming guitar" class="selling-points_images" />
