--- a/contact.html
+++ b/contact.html
@@ -1,43 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="Contact guitar kings for amazing products">
-    <link href="css/styles.css" rel="stylesheet">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Contact Guitar Kings for amazing products you'll love" />
     <title>Guitar Kings | Contact</title>
-</head>
-<body>
+    <link href="css/styles.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/b318972c4d.js" crossorigin="anonymous"></script>
+  </head>
+  <body>
     <header>
-        <a href="index.html" class="logo">Guitar Kings</a>
-        <nav>
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="guitars.html">Guitars</a></li>
-                <li><a href="contact.html" class="active">Contact</a></li>
-            </ul>
-        </nav>
+      <a href="index.html" class="logo">Guitar Kings</a>
+      <label for="hamburger-menu"><i class="fas fa-bars"></i></label>
+      <input type="checkbox" id="hamburger-menu" />
+      <nav>
+        <ul>
+          <li><a href="index.html">Home</a></li>
+          <li><a href="guitars.html">Guitars</a></li>
+          <li><a href="contact.html" class="active">Contact</a></li>
+        </ul>
+      </nav>
     </header>
-    <main>
-       <h1>Contact</h1>
-       <form method="POST">
-        <label for="fullname">Full name</label>
-        <input type="text" name="fullname" id="fullname">
-        <label for="email">Email</label>
-        <input type="email" name="email" id="email">
-        <label for="guitar">Guitar</label>
-        <select name="guitar" id="guitar">
-            <option value="Adirondack Red">Adirondack Red</option>
-            <option value="Adirondack Blue">Adirondack Blue</option>
-            <option value="Adirondack Green">Adirondack Green</option>
-        </select>
-            <input type="checkbox" name="email-updates" id="email-updates">
-            <label for="email-updates">Sign up for email updates.</label>
+    <main class="contact">
+      <h1>Contact</h1>
+      <form method="POST">
+        <div class="form-wrapper">
+          <section>
+            <label for="name">Full name</label>
+            <input type="text" id="name" name="name" />
+            <label for="email">Email</label>
+            <input type="email" id="email" name="Email" />
+            <label for="guitar">Guitar</label>
+            <select id="guitar" name="Guitar">
+              <option value="Adirondack Red">Adirondack Red</option>
+              <option value="Adirondack Blue">Adirondack Blue</option>
+              <option value="Adirondack Green">Adirondack Green</option>
+            </select>
+            <div>
+              <input type="checkbox" id="email-updates" name="email-updates" />
+              <label for="email-updates">Sign up for email updates.</label>
+            </div>
+          </section>
+          <section>
             <label for="message">Message</label>
             <textarea id="message" name="message"></textarea>
-            <input type="submit" value="Send Now" class="cta">
-        </form>
+          </section>
+        </div>
+        <input type="submit" value="Send Now" class="cta cta-large" />
+      </form>
     </main>
     <footer>Copyright &copy;</footer>
-</body>
+  </body>
 </html>
